Initial LMS upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=LMS
-spring.datasource.url=jdbc:mysql://shinkansen.proxy.rlwy.net:31151/railway  
+spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:28596/railway  
 spring.datasource.username=root
-spring.datasource.password=fwxrScUeuAHDZDazUrASOnewUIwOujKL
+spring.datasource.password=MWDkqwaUwPYrZVsyDEJvQvjOFuePSXEo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8080
+server.port=8081
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
