--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=LMS
-spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:28596/railway  
+spring.datasource.url=jdbc:mysql://crossover.proxy.rlwy.net:38379/railway  
 spring.datasource.username=root
-spring.datasource.password=MWDkqwaUwPYrZVsyDEJvQvjOFuePSXEo
+spring.datasource.password=QtaZSjVqAmKBLffyAfEMpxoeQsDpQxIs
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8081
+server.port=8082
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
